--- a/css/main.css
+++ b/css/main.css
@@ -5,14 +5,15 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-h1{
-    color:rgb(176, 146, 241); ;
+h1 {
+    color: rgb(176, 146, 241);
+    ;
     font-size: 3em;
 }
 
 table {
-	margin: 50px auto;
-	border: 1px solid gray;
+    margin: 25px auto;
+    border: 1px solid gray;
     color: black;
     background-color: la;
 }
@@ -21,22 +22,32 @@ td {
     border: 1px solid gray;
     background-color: whitesmoke;
     width: 30px;
-	height: 30px;
-    transition: background-color 0.4s ease-in-out;
+    height: 30px;
+    transition: background-color 0.5s ease-in-out;
 }
 
-td:hover{
+td:hover {
+    background-color: rgb(163, 163, 245);
+}
+
+td.revealed:hover {
     background-color: lavender;
+    transition: none;
 }
 
-td.revealed:hover{
-    background-color: inherit;
+td.mine:hover {
+    background-color: rgb(108, 70, 155);
+    transition: none;
+}
+
+td.flagged:hover {
+    background-color: lightpink;
     transition: none;
 }
 
 .cell {
-	text-align: center;
-	font-size: 1em;
+    text-align: center;
+    font-size: 1em;
 }
 
 .covered {
@@ -45,51 +56,65 @@ td.revealed:hover{
     cursor: pointer;
 }
 
-.revealed{
-    background-color: whitesmoke;
+.revealed {
+    background-color: lavender;
 }
 
-.flagged{
+.flagged {
     background-color: lightpink;
 }
 
-.mine{
+.mine {
     background-color: rgb(108, 70, 155);
 
 }
 
-td.mine:hover{
-    background-color: rgb(108, 70, 155);
-    transition: none;
+
+
+button {
+    cursor: pointer;
+    transition: background-color 0.5s ease-in-out;
 }
 
-.smiley-btn{
+.smiley-btn {
     width: 50px;
     height: 50px;
     font-size: 1.5em;
-}
-
-button{
-    cursor: pointer;
-}
-
-.btn-diff{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 13px;
-    margin-bottom: 20px;
-    border-radius: 10px;
     background-color: rgb(201, 187, 228);
-    cursor: pointer;
-    /* font-style:italic; */
-    border: 1px solid black;
+    border-radius: 5px;
+    border: 0px;
+}
+
+.smiley-btn:hover{
+    background-color: rgb(163, 163, 245);
 }
 
 .difficulty {
-    width: 300px;
-    margin: auto;
+    /* width: 300px; */
+    /* margin: auto; */
+    margin-top: 5px;
+    padding: 10px;
     background-color: lavender;
-    border-radius: 20px;
-    margin-top: 15px;
-    border: solid;
-    border: 1px solid black;
+    /* border-radius: 20px; */
+    border: 0px;
+    font-size: 15px;
+    /* border: 1px solid black; */
+}
+
+.difficulty span{
+    margin-right: 7px;
+}
+
+.btn-diff {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 13px;
+    /* margin-bottom: 10px; */
+    border-radius: 5px;
+    background-color: rgb(201, 187, 228);
+    border: 0px;
+    margin-right: 3px;
+}
+
+.btn-diff:hover{
+    background-color: rgb(163, 163, 245);
 }
